cam func + select cam

--- a/Prot 1 func/selectcams.html
+++ b/Prot 1 func/selectcams.html
@@ -29,26 +29,29 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Menu Principal <br> <small></small></h1>
+		  					<h1 class= "width act maintext">Câmaras<br> <small>Seleccionar Câmara</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Mensagens</h3>
+			  				<h3 class= "width act maintext" id="headerfunc">Câmara 1</h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-							    <li class="left-menu" data-msg="Mensagens" data-help="Enviar e ver mensagens recebidas de outros utilizadores" data-txt="">
-							      	<a class="nav-button" href="mensagens.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	<li class="left-menu" data-msg="Câmara 1" data-help="Seleccionar câmara 1 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid1.gif'>">
+							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a>
 							    </li>
-							  	<li class="left-menu" data-msg="Câmaras" data-help="Ver, tirar fotos e muito mais usando as câmaras dos passageiros" data-txt="">
-							  		<a class="nav-button" href="camara.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
+							  	<li class="left-menu" data-msg="Câmara 2" data-help="Seleccionar câmara 2 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid2.gif'>">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a>
 							  	</li>
-							  	<li class="left-menu" data-msg="Personalização/ Avarias" data-help="Personalizar o seu carro e verificar as avarias registadas" data-txt="">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
+							  	<li class="left-menu" data-msg="Câmara 3" data-help="Seleccionar câmara 3 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid3.gif'>">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a>
 							  	</li>
+							  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
+									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
+								</li>
 						    </nav>
 						</div>
 						<div class="col-md-4 padding2">
@@ -62,14 +65,24 @@
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
-							</ul>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+							</ul>..
 						</div>
 		  			</div>
 		  		</div>
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-		  					<h4 class="maintext width act" id="helperfunc">Bem-vindo ao Kitt, seleccione a funcionalidade desejada</h4>
+		  					<h4 class="maintext width act" id="helperfunc">Seleccionar câmara 1 para câmara activa</h4>
+		  				</div>
+		  			</div>
+		  			<div class="row top-buffer-main">
+		  				<div class="col-md-5 col-md-offset-7 box smallpadding" id="mainwindow">
+		  					<div class="width act" id="maintext">
+		  						<img class='img' src='./imgs/cam/kid1.gif'>
+		  					</div>
 		  				</div>
 		  			</div>
 		  		</div>
