--- a/Prot 1 func/camara.html
+++ b/Prot 1 func/camara.html
@@ -29,26 +29,26 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Menu Principal <br> <small></small></h1>
+		  					<h1 class= "width act maintext">Câmaras <br> <small></small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Mensagens</h3>
+			  				<h3 class= "width act maintext" id="headerfunc">Seleccionar câmara</h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-							    <li class="left-menu" data-msg="Mensagens" data-help="Enviar e ver mensagens recebidas de outros utilizadores" data-txt="">
-							      	<a class="nav-button" href="mensagens.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+							    <li class="left-menu" data-msg="Seleccionar câmara" data-help="Seleccionar uma câmara activa para visualizar, fotografar, gravar e muito mais" data-txt="">
+							    	<a class="nav-button" href="selectcams.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
 							    </li>
-							  	<li class="left-menu" data-msg="Câmaras" data-help="Ver, tirar fotos e muito mais usando as câmaras dos passageiros" data-txt="">
-							  		<a class="nav-button" href="camara.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
-							  	</li>
-							  	<li class="left-menu" data-msg="Personalização/ Avarias" data-help="Personalizar o seu carro e verificar as avarias registadas" data-txt="">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
-							  	</li>
+								<li class="left-menu" data-msg="Galeria" data-help="Consultar as fotografias e vídeos guardados" data-txt="">
+									<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-th"></span></a>
+								</li>
+								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
+									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
+								</li>
 						    </nav>
 						</div>
 						<div class="col-md-4 padding2">
@@ -69,7 +69,7 @@
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-		  					<h4 class="maintext width act" id="helperfunc">Bem-vindo ao Kitt, seleccione a funcionalidade desejada</h4>
+		  					<h4 class="maintext width act" id="helperfunc">Seleccionar uma câmara activa para visualizar, fotografar, gravar e muito mais</h4>
 		  				</div>
 		  			</div>
 		  		</div>
