--- a/Prot 1 func/camara.html
+++ b/Prot 1 func/camara.html
@@ -34,7 +34,7 @@
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Seleccionar câmara</h3>
+			  				<h3 class= "width act maintext" id="headerfunc"></h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
@@ -44,7 +44,7 @@
 							    	<a class="nav-button" href="selectcams.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
 							    </li>
 								<li class="left-menu" data-msg="Galeria" data-help="Consultar as fotografias e vídeos guardados" data-txt="">
-									<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-th"></span></a>
+									<a class="nav-button" href="galeria.html"><span class="mainicon glyphicon glyphicon-th"></span></a>
 								</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
@@ -69,7 +69,7 @@
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-		  					<h4 class="maintext width act" id="helperfunc">Seleccionar uma câmara activa para visualizar, fotografar, gravar e muito mais</h4>
+		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
 		  		</div>
