--- a/Prot 1 func/convites.html
+++ b/Prot 1 func/convites.html
@@ -34,7 +34,7 @@
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Mensagem: 1 / 1</h3>
+			  				<h3 class= "width act maintext" id="headerfunc"></h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
@@ -63,16 +63,12 @@
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-		  					<h4 class="maintext width act" id="helperfunc">Mensagem pré-definida de convite - 1</h4>
+		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 col-md-offset-7 box smallpadding" id="mainwindow">
 		  					<div class="width act" id="maintext">
-		  						<h4> Mensagem: </h4>
-		  						<p>Olá, não pude deixar de reparar em ti. Queres ir beber um café logo?</p>
-		  						<p>Sizenante Fonseca</p>
-		  						<p>21/03/2100</p>
 		  					</div>
 		  				</div>
 		  			</div>
