--- a/Prot 1 func/galeria.html
+++ b/Prot 1 func/galeria.html
@@ -29,21 +29,30 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Mensagens<br> <small>Utilizador</small></h1>
+		  					<h1 class= "width act maintext">Câmaras<br> <small>Seleccionar Câmara</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Utilizador: 1 / 1</h3>
+			  				<h3 class= "width act maintext" id="headerfunc"></h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Utilizador: 1 / 1" data-help="Utilizador Seleccionado - 1" data-txt="<h4> Utilizador: </h4><p>Gilberto Fradique</p><p>XX-KK-00</p>">
-						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-user"></span></a>
-						    	</li>
-								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
+						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
+						    	<li class="left-menu store" data-msg="Foto 1" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 24/03/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic1.jpg'>">
+							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-picture"></span></a>
+							    </li>
+							  	<li class="left-menu store" data-msg="Foto 2" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 23/02/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic2.jpg'>">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-picture"></span></a>
+							  	</li>
+							  	<li class="left-menu store" data-msg="Foto 3" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 10/02/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic3.jpg'>">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-picture"></span></a>
+							  	</li>
+							  	<li class="left-menu store" data-msg="Vídeo 1" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 01/02/2230" data-txt="<img class='img' src='./imgs/cam/kid4.gif'>">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-film"></span></a>
+							  	</li>
+							  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 								</li>
 						    </nav>
@@ -56,7 +65,13 @@
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
-							</ul>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+								<li class="noact width">
+									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
+								</li>
+							</ul>..
 						</div>
 		  			</div>
 		  		</div>
