--- a/Prot 1 func/entrada.html
+++ b/Prot 1 func/entrada.html
@@ -34,7 +34,7 @@
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Mensagens nova</h3>
+			  				<h3 class= "width act maintext" id="headerfunc"></h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
@@ -87,16 +87,12 @@
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-		  					<h4 class="maintext width act" id="helperfunc">3 mensagens novas, 2 mensagens lidas</h4>
+		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 col-md-offset-7 box smallpadding" id="mainwindow">
 		  					<div class="width act" id="maintext">
-		  						<h4>Mensagem: </h4>
-		  						<p>Cuidado! Acabei de passar por uma operação stop.</p>
-		  						<p>Josefa Fradique</p>
-		  						<p>24/03/2230</p>
 		  					</div>
 		  				</div>
 		  			</div>
