--- a/Prot 1 func/selectcams.html
+++ b/Prot 1 func/selectcams.html
@@ -34,20 +34,20 @@
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Câmara 1</h3>
+			  				<h3 class= "width act maintext" id="headerfunc"></h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Câmara 1" data-help="Seleccionar câmara 1 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid1.gif'>">
-							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a>
+						    	<li class="left-menu store" data-msg="Câmara 1" data-help="Seleccionar câmara 1 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid1.gif'>">
+							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-picture"></span></a>
 							    </li>
-							  	<li class="left-menu" data-msg="Câmara 2" data-help="Seleccionar câmara 2 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid2.gif'>">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a>
+							  	<li class="left-menu store" data-msg="Câmara 2" data-help="Seleccionar câmara 2 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid2.gif'>">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-picture"></span></a>
 							  	</li>
-							  	<li class="left-menu" data-msg="Câmara 3" data-help="Seleccionar câmara 3 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid3.gif'>">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a>
+							  	<li class="left-menu store" data-msg="Câmara 3" data-help="Seleccionar câmara 3 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid4.gif'>">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-film"></span></a>
 							  	</li>
 							  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
@@ -75,13 +75,12 @@
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-		  					<h4 class="maintext width act" id="helperfunc">Seleccionar câmara 1 para câmara activa</h4>
+		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 col-md-offset-7 box smallpadding" id="mainwindow">
 		  					<div class="width act" id="maintext">
-		  						<img class='img' src='./imgs/cam/kid1.gif'>
 		  					</div>
 		  				</div>
 		  			</div>
