--- a/Prot 1 func/temas.html
+++ b/Prot 1 func/temas.html
@@ -34,7 +34,7 @@
 		  			</div>
 		  			<div class="row top-buffer">
 		  				<div class="col-md-1 box" id="tittle">
-			  				<h3 class= "width act maintext" id="headerfunc">Avisos</h3>
+			  				<h3 class= "width act maintext" id="headerfunc"></h3>
 			  			</div>
 		  			</div>
 		  			<div class="row">
@@ -87,14 +87,12 @@
 		  		<div class="col-md-9">
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
-		  					<h4 class="maintext width act" id="helperfunc">Mensagens de aviso relacionadas com a condução</h4>
+		  					<h4 class="maintext width act" id="helperfunc"></h4>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 pull-right box smallpadding" id="mainwindow">
 		  					<div class="width act" id="maintext">
-		  						<h4> Exemplos: </h4>
-		  						<p>Cuidado! Acabei de passar por uma operação stop.</p>
 		  					</div>
 		  				</div>
 		  			</div>
