active cam menu

--- a/Prot 1 func/activecam.html
+++ b/Prot 1 func/activecam.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Mensagens <br> <small>Caixa de Entrada</small></h1>
+		  					<h1 class= "width act maintext">Câmaras<br> <small>Câmara activa</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -39,20 +39,17 @@
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu usestore" data-msg="Responder" data-help="Responder a esta mensagem usando uma das resposta pré-definidas">
-									<a class="nav-button" href="resposta.html"><span class="mainicon glyphicon glyphicon-upload"></span></a>
-								</li>
-						   		<li class="left-menu usestore" data-msg="Marcar como por ler" data-help="Marcar a mensagem recebida como por ler">
-							    	<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-align-justify"></span></a>
+						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
+						    	<li class="left-menu usestore" data-msg="Fotografar" data-help="Tirar uma fotografia da câmara activa">
+							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-camera"></span></a>
 							    </li>
-								<li class="left-menu usestore" data-msg="Marcar como lida" data-help="Marcar a mensagem recebida como lida">
-									<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-check"></span></a>
-								</li>
-								<li class="left-menu usestore" data-msg="Apagar" data-help="Apagar a mensagem da caixa de entrada">
-									<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-trash"></span></a>
-								</li>
-								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
+							  	<li class="left-menu usestore" data-msg="Gravar" data-help="Gravar um vídeo da câmara activa">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-facetime-video"></span></a>
+							  	</li>
+							  	<li class="left-menu usestore" data-msg="Zoom" data-help="Ampliar a imagem da câmara activa">
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-search"></span></a>
+							  	</li>
+							  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 								</li>
 						    </nav>
@@ -71,13 +68,7 @@
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
-							</ul>
+							</ul>..
 						</div>
 		  			</div>
 		  		</div>
