--- a/Prot 1 func/selectcams.html
+++ b/Prot 1 func/selectcams.html
@@ -41,13 +41,13 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
 						    	<li class="left-menu store" data-msg="Câmara 1" data-help="Seleccionar câmara 1 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid1.gif'>">
-							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-picture"></span></a>
+							      	<a class="nav-button" href="activecam.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
 							    </li>
 							  	<li class="left-menu store" data-msg="Câmara 2" data-help="Seleccionar câmara 2 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid2.gif'>">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-picture"></span></a>
+							  		<a class="nav-button" href="activecam.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
 							  	</li>
 							  	<li class="left-menu store" data-msg="Câmara 3" data-help="Seleccionar câmara 3 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid4.gif'>">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-film"></span></a>
+							  		<a class="nav-button" href="activecam.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
 							  	</li>
 							  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
