--- a/Prot 1 func/avarias.html
+++ b/Prot 1 func/avarias.html
@@ -24,12 +24,12 @@
   </head>
   <body>
   	<div class="background">
-  		<div class="container-fluid">
+	  	<div class="container-fluid">
 		  	<div class="row">
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Menu Principal <br> <small></small></h1>
+		  					<h1 class= "width act maintext">Personalização e Avarias<br> <small>Avarias</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -39,38 +39,20 @@
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Calendário" data-help="Ver o calendário, consultar tarefas e marcações agendadas" data-txt="">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-calendar"></span></a>
-							  	</li>
-						    	<li class="left-menu" data-msg="Câmaras" data-help="Ver, tirar fotos e muito mais usando as câmaras dos passageiros" data-txt="">
-							  		<a class="nav-button" href="camara.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
-							  	</li>
-							  	<li class="left-menu" data-msg="Compras" data-help="Compre e reserve produtos com entrega ao domicílio" data-txt="">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-shopping-cart"></span></a>
-							  	</li>
-							  	<li class="left-menu" data-msg="GPS" data-help="Seguir rotas, encontrar pontos de interesse, pesquisar moradas e muito mais" data-txt="">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-globe"></span></a>
-							  	</li>
-							    <li class="left-menu" data-msg="Mensagens" data-help="Enviar e ver mensagens recebidas de outros utilizadores" data-txt="">
-							      	<a class="nav-button" href="mensagens.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+						    	<li class="left-menu" data-msg="Histórico de avarias" data-help="Consulte o históricos das várias avarias que o seu veículo já possuio">
+						    		<a class="nav-button" href="avisos.html"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
+						    	</li >
+							    <li class="left-menu" data-msg="Avaria no motor" data-help="Personalize os vários constituintes do seu carro a gosto">
+							    	<a class="nav-button" href="convites.html"><span class="mainicon glyphicon glyphicon-edit"></span></a>
 							    </li>
-							  	<li class="left-menu" data-msg="Personalização/ Avarias" data-help="Personalizar o seu carro e verificar as avarias registadas" data-txt="">
-							  		<a class="nav-button" href="avpersona.html"><span class="mainicon glyphicon glyphicon-cog"></span><span class="glyphicon glyphicon-cog"></span></a>
-							  	</li>
+								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
+									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
+								</li>
 						    </nav>
 						</div>
 						<div class="col-md-4 padding2">
 							<ul class="nav nav-pills nav-stacked nav-fixed-left text-left">
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
@@ -88,6 +70,12 @@
 		  			<div class="row">
 		  				<div class="col-md-5 col-md-offset-1 box smallpadding" id="helper">
 		  					<h4 class="maintext width act" id="helperfunc"></h4>
+		  				</div>
+		  			</div>
+		  			<div class="row top-buffer-main">
+		  				<div class="col-md-5 pull-right box smallpadding" id="mainwindow">
+		  					<div class="width act" id="maintext">
+		  					</div>
 		  				</div>
 		  			</div>
 		  		</div>
