--- a/Prot 1 func/avpersona.html
+++ b/Prot 1 func/avpersona.html
@@ -41,10 +41,10 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
 						    	<li class="left-menu" data-msg="Avarias" data-help="Consulte as várias informações relativas a avarias do seu veículo">
-						    		<a class="nav-button" href="avisos.html"><span class="mainicon glyphicon glyphicon-exclamation-sign"></span></a>
+						    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
 						    	</li >
 							    <li class="left-menu" data-msg="Personalização" data-help="Personalize os vários constituintes do seu carro a gosto">
-							    	<a class="nav-button" href="convites.html"><span class="mainicon glyphicon glyphicon-cutlery"></span></a>
+							    	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-edit"></span></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
