--- a/Prot 1 func/galeria.html
+++ b/Prot 1 func/galeria.html
@@ -41,16 +41,16 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
 						    	<li class="left-menu store" data-msg="Foto 1" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 24/03/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic1.jpg'>">
-							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-picture"></span></a>
+							      	<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic1.jpg)"></div></a>
 							    </li>
 							  	<li class="left-menu store" data-msg="Foto 2" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 23/02/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic2.jpg'>">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-picture"></span></a>
+							  		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic2.jpg)"></div></a>
 							  	</li>
 							  	<li class="left-menu store" data-msg="Foto 3" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 10/02/2230" data-txt="<img class='img' src='./imgs/cam/gal/pic3.jpg'>">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-picture"></span></a>
+							  		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/gal/pic3.jpg)"></div></a>
 							  	</li>
 							  	<li class="left-menu store" data-msg="Vídeo 1" data-help="Seleccionar imagem / vídeo para mais opções.<br>Data: 01/02/2230" data-txt="<img class='img' src='./imgs/cam/kid4.gif'>">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-film"></span></a>
+							  		<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/cam/kid4.gif)"></div></a>
 							  	</li>
 							  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
