avarias + roda icon

--- a/Prot 1 func/avarias.html
+++ b/Prot 1 func/avarias.html
@@ -41,10 +41,10 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
 						    	<li class="left-menu" data-msg="Histórico de avarias" data-help="Consulte o históricos das várias avarias que o seu veículo já possuio">
-						    		<a class="nav-button" href="avisos.html"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
+						    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-list"></span></a>
 						    	</li >
-							    <li class="left-menu" data-msg="Avaria no motor" data-help="Personalize os vários constituintes do seu carro a gosto">
-							    	<a class="nav-button" href="convites.html"><span class="mainicon glyphicon glyphicon-edit"></span></a>
+							    <li class="left-menu" data-msg="Avaria numa roda" data-help="Personalize os vários constituintes do seu carro a gosto">
+							    	<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/icons/roda.png)"></div></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
