--- a/Prot 1 func/avpersona.html
+++ b/Prot 1 func/avpersona.html
@@ -41,7 +41,7 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
 						    	<li class="left-menu" data-msg="Avarias" data-help="Consulte as várias informações relativas a avarias do seu veículo">
-						    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
+						    		<a class="nav-button" href="avarias.html"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
 						    	</li >
 							    <li class="left-menu" data-msg="Personalização" data-help="Personalize os vários constituintes do seu carro a gosto">
 							    	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-edit"></span></a>
