--- a/Prot 1 func/avarias.html
+++ b/Prot 1 func/avarias.html
@@ -40,10 +40,10 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Histórico de avarias" data-help="Consulte o históricos das várias avarias que o seu veículo já possuio">
+						    	<li class="left-menu" data-msg="Histórico de avarias" data-help="Consulte o históricos das várias avarias que o seu veículo já possuio" data-txt="">
 						    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-list"></span></a>
 						    	</li >
-							    <li class="left-menu" data-msg="Avaria numa roda" data-help="Personalize os vários constituintes do seu carro a gosto">
+							    <li class="left-menu" data-msg="Avaria num pneu" data-help="Verifique a avaria, gravidade e sugestão apresentada para reparação" data-txt="<h4>Gravidade: <b>Grave</b></h4><p>Descrição: Pneu furado.</p><p>24/03/2230</p>">
 							    	<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/icons/roda.png)"></div></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
