--- a/Prot 1 func/logavaria.html
+++ b/Prot 1 func/logavaria.html
@@ -29,7 +29,7 @@
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Personalização e Avarias</h1>
+		  					<h1 class= "width act maintext">Personalização e Avarias<br> <small>Avarias</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -40,11 +40,11 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Avarias" data-help="Consulte as várias informações relativas a avarias do seu veículo">
-						    		<a class="nav-button" href="avarias.html"><span class="mainicon glyphicon glyphicon-warning-sign"></span></a>
+						    	<li class="left-menu" data-msg="Histórico de avarias" data-help="Consulte o históricos das várias avarias que o seu veículo já possuio" data-txt="">
+						    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-list"></span></a>
 						    	</li >
-							    <li class="left-menu" data-msg="Personalização" data-help="Personalize os vários constituintes do seu carro a gosto">
-							    	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-wrench"></span></a>
+							    <li class="left-menu" data-msg="Avaria num pneu" data-help="Verifique a avaria, gravidade e sugestão apresentada para reparação" data-txt="<h4>Gravidade: <b>Grave</b></h4><p>Descrição: Pneu furado.</p><p>24/03/2230</p>">
+							    	<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/icons/roda.png)"></div></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
