avarias + new icons

--- a/Prot 1 func/avaria.html
+++ b/Prot 1 func/avaria.html
@@ -24,12 +24,12 @@
   </head>
   <body>
   	<div class="background">
-  		<div class="container-fluid">
+	  	<div class="container-fluid">
 		  	<div class="row">
 		  		<div class="col-md-3">
 		  			<div class="row">
 		  				<div class="col-md-12 box" id="maintittle">
-		  					<h1 class= "width act maintext">Câmaras<br> <small>Seleccionar Câmara</small></h1>
+		  					<h1 class= "width act maintext">Personalização e Avarias<br> <small>Avarias</small></h1>
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer">
@@ -39,17 +39,14 @@
 		  			</div>
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
-						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
-						    	<li class="left-menu store" data-msg="Câmara 1" data-help="Seleccionar câmara 1 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid1.gif'>">
-							      	<a class="nav-button" href="activecam.html"><span class="mainicon glyphicon glyphicon-camera"></span><span class="mainicon"> 1</span></a>
+						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
+						    	<li class="left-menu usestore" data-msg="Descrição" data-help="Consulte uma descrição detalhada da avaria">
+						    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-info-sign"></span></a>
+						    	</li >
+							    <li class="left-menu usestore2" data-msg="Sugestão" data-help="Consulte a sugestão de reparação apresentada para a avaria em causa">
+							    	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
 							    </li>
-							  	<li class="left-menu store" data-msg="Câmara 2" data-help="Seleccionar câmara 2 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid2.gif'>">
-							  		<a class="nav-button" href="activecam.html"><span class="mainicon glyphicon glyphicon-camera"></span><span class="mainicon"> 2</span></a>
-							  	</li>
-							  	<li class="left-menu store" data-msg="Câmara 3" data-help="Seleccionar câmara 3 para câmara activa" data-txt="<img class='img' src='./imgs/cam/kid4.gif'>">
-							  		<a class="nav-button" href="activecam.html"><span class="mainicon glyphicon glyphicon-camera"></span><span class="mainicon"> 3</span></a>
-							  	</li>
-							  	<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
+								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
 								</li>
 						    </nav>
@@ -65,10 +62,7 @@
 								<li class="noact width">
 									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
 								</li>
-								<li class="noact width">
-									<blockquote class=" side mainicon glyphicon glyphicon-ok-circle"></blockquote>
-								</li>
-							</ul>..
+							</ul>
 						</div>
 		  			</div>
 		  		</div>
@@ -79,7 +73,7 @@
 		  				</div>
 		  			</div>
 		  			<div class="row top-buffer-main">
-		  				<div class="col-md-5 col-md-offset-7 box smallpadding" id="mainwindow">
+		  				<div class="col-md-5 pull-right box smallpadding" id="mainwindow">
 		  					<div class="width act" id="maintext">
 		  					</div>
 		  				</div>
