--- a/Prot 1 func/avarias.html
+++ b/Prot 1 func/avarias.html
@@ -40,11 +40,25 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Histórico de avarias" data-help="Consulte o históricos das várias avarias que o seu veículo já possuio" data-txt="">
+						    	<li class="left-menu" data-msg="Histórico de avarias" data-help="Consulte o históricos das várias avarias que o seu veículo já possuio" data-txt="<table class='table'><tbody><tr>
+						    		<td><b>Avaria</b></td>
+						    		<td><b>Gravidade</b></td>
+						    		<td><b>Data</b></td>
+						    	</tr>
+						    	<tr>
+						    		<td>Pneu furado</td>
+						    		<td>Grave</td>
+						    		<td>24/03/2230</td>
+						    	</tr>
+						    	<tr>
+						    		<td>Motor a jacto</td>
+						    		<td>Grave</td>
+						    		<td>18/02/2230</td>
+						    	</tr></tbody></table>">
 						    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-list"></span></a>
 						    	</li >
-							    <li class="left-menu" data-msg="Avaria num pneu" data-help="Verifique a avaria, gravidade e sugestão apresentada para reparação" data-txt="<h4>Gravidade: <b>Grave</b></h4><p>Descrição: Pneu furado.</p><p>24/03/2230</p>">
-							    	<a class="nav-button" href="#"><div class="icon" style="background-image: url(./imgs/icons/roda.png)"></div></a>
+							    <li class="left-menu store" data-msg="Avaria num pneu" data-help="Verifique a avaria, gravidade e sugestão apresentada para reparação" data-txt="<h4>Gravidade: <b>Grave</b></h4><p>Descrição: Pneu furado.</p><p>24/03/2230</p>" data-txt2="<h4>Gravidade: <b>Grave</b></h4><p>Sugestão de reparação: Trocar o pneu furado pelo pneu supelente.</p><p>24/03/2230</p>">
+							    	<a class="nav-button" href="avaria.html"><div class="icon" style="background-image: url(./imgs/icons/roda.png)"></div></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
 									<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
