--- a/Prot 1 func/camara.html
+++ b/Prot 1 func/camara.html
@@ -41,7 +41,7 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
 							    <li class="left-menu" data-msg="Seleccionar câmara" data-help="Seleccionar uma câmara activa para visualizar, fotografar, gravar e muito mais" data-txt="">
-							    	<a class="nav-button" href="selectcams.html"><span class="mainicon glyphicon glyphicon-camera"></span></a>
+							    	<a class="nav-button" href="selectcams.html"><span class="mainicon glyphicon glyphicon-camera"></span><span class="iconnum">1..3</span></a>
 							    </li>
 								<li class="left-menu" data-msg="Galeria" data-help="Consultar as fotografias e vídeos guardados" data-txt="">
 									<a class="nav-button" href="galeria.html"><span class="mainicon glyphicon glyphicon-th"></span></a>
