new features + login

--- a/Prot 1 func/avarias.html
+++ b/Prot 1 func/avarias.html
@@ -52,12 +52,12 @@
 						    	</tr>
 						    	<tr>
 						    		<td>Motor a jacto</td>
-						    		<td>Grave</td>
+						    		<td>Muito Grave</td>
 						    		<td>18/02/2230</td>
 						    	</tr></tbody></table>">
-						    		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-list"></span></a>
+						    		<a class="nav-button" href="logavaria.html"><span class="mainicon glyphicon glyphicon-list"></span></a>
 						    	</li >
-							    <li class="left-menu store" data-msg="Avaria num pneu" data-help="Verifique a avaria, gravidade e sugestão apresentada para reparação" data-txt="<h4>Gravidade: <b>Grave</b></h4><p>Descrição: Pneu furado.</p><p>24/03/2230</p>" data-txt2="<h4>Gravidade: <b>Grave</b></h4><p>Sugestão de reparação: Trocar o pneu furado pelo pneu supelente.</p><p>24/03/2230</p>">
+							    <li class="left-menu store" data-msg="Pneu" data-help="Verifique a avaria, gravidade e sugestão apresentada para reparação" data-txt="<h4>Gravidade: <b>Grave</b></h4><p>Descrição: Pneu furado.</p><p>24/03/2230</p>" data-txt2="<h4>Gravidade: <b>Grave</b></h4><p>Sugestão de reparação: Trocar o pneu furado pelo pneu supelente.</p><p>24/03/2230</p>">
 							    	<a class="nav-button" href="avaria.html"><div class="icon" style="background-image: url(./imgs/icons/roda.png)"></div></a>
 							    </li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
