--- a/Prot 1 func/avpersona.html
+++ b/Prot 1 func/avpersona.html
@@ -40,7 +40,7 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu" data-msg="Avarias" data-help="Consulte as várias informações relativas a avarias do seu veículo">
+						    	<li class="left-menu" data-msg="Avarias" data-help="Consulte as várias informações relativas a avarias do seu veículo" data-txt=" <div class='mainimage' style='background-image: url(./imgs/icons/car-tire.png)'></div>">
 						    		<a class="nav-button" href="avarias.html"><span class="mainicon glyphicon glyphicon-warning-sign"></span></a>
 						    	</li >
 							    <li class="left-menu" data-msg="Personalização" data-help="Personalize os vários constituintes do seu carro a gosto">
@@ -74,7 +74,7 @@
 		  			</div>
 		  			<div class="row top-buffer-main">
 		  				<div class="col-md-5 pull-right box smallpadding" id="mainwindow">
-		  					<div class="width act" id="maintext">
+		  					<div class="width act imagefield" id="maintext">
 		  					</div>
 		  				</div>
 		  			</div>
