--- a/Prot 1 func/convites.html
+++ b/Prot 1 func/convites.html
@@ -40,7 +40,13 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu store" data-msg="Mensagem: 1 / 1" data-help="Mensagem pré-definida de convite - 1" data-txt="<h4> Mensagem: </h4><p>Olá, não pude deixar de reparar em ti. Queres ir beber um café logo?</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    	<li class="left-menu store" data-msg="Mensagem: 1 / 3" data-help="Mensagem pré-definida de convite - 1" data-txt="<h4> Mensagem: </h4><p>Olá, não pude deixar de reparar em ti. Queres ir beber um café logo?</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	</li>
+							<li class="left-menu store" data-msg="Mensagem: 2 / 3" data-help="Mensagem pré-definida de convite - 2" data-txt="<h4> Mensagem: </h4><p>Bora sair à noite?</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	</li>
+						    	<li class="left-menu store" data-msg="Mensagem: 3 / 3" data-help="Mensagem pré-definida de convite - 3" data-txt="<h4> Mensagem: </h4><p>Olá! Queres ir ver um filme comigo?</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
 						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
 						    	</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
