--- a/Prot 1 func/avisos.html
+++ b/Prot 1 func/avisos.html
@@ -40,7 +40,10 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu store" data-msg="Mensagem: 1 / 1" data-help="Mensagem pré-definida de aviso - 1" data-txt="<h4> Mensagem: </h4><p>Cuidado! Acabei de passar por uma operação stop.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    	<li class="left-menu store" data-msg="Mensagem: 1 / 2" data-help="Mensagem pré-definida de aviso - 1" data-txt="<h4> Mensagem: </h4><p>Cuidado! Acabei de passar por uma operação stop.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	</li>
+						    	<li class="left-menu store" data-msg="Mensagem: 2 / 2" data-help="Mensagem pré-definida de aviso - 2" data-txt="<h4> Mensagem: </h4><p>Atenção! Tens os máximos ligados.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
 						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
 						    	</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
