--- a/Prot 1 func/insultos.html
+++ b/Prot 1 func/insultos.html
@@ -40,10 +40,13 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu store" data-msg="Mensagem: 1 / 2" data-help="Mensagem pré-definida de insulto - 1" data-txt="<h4> Mensagem: </h4><p>Sai da frente oh palhaço!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    	<li class="left-menu store" data-msg="Mensagem: 1 / 3" data-help="Mensagem pré-definida de insulto - 1" data-txt="<h4> Mensagem: </h4><p>Sai da frente oh palhaço!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
 						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
 						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 2 / 2" data-help="Mensagem pré-definida de insulto - 2" data-txt="<h4> Mensagem: </h4><p>A minha avó conduz melhor que tu e não vê!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    	<li class="left-menu store" data-msg="Mensagem: 2 / 3" data-help="Mensagem pré-definida de insulto - 2" data-txt="<h4> Mensagem: </h4><p>A minha avó conduz melhor que tu e não vê!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	</li>
+						    	<li class="left-menu store" data-msg="Mensagem: 3 / 3" data-help="Mensagem pré-definida de insulto - 3" data-txt="<h4> Mensagem: </h4><p>404 - Carta não encontrada.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
 						    		<a class="nav-button" href="selectuser.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
 						    	</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
