--- a/Prot 1 func/resposta.html
+++ b/Prot 1 func/resposta.html
@@ -40,19 +40,22 @@
 		  			<div class="row">
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left text-center" role="navigation">
-						    	<li class="left-menu store" data-msg="Mensagem: 1 / 5" data-help="Resposta pré-definida - 1" data-txt="<h4> Mensagem: </h4><p>Sim, teria todo o gosto.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    	<li class="left-menu store" data-msg="Mensagem: 1 / 6" data-help="Resposta pré-definida - 1" data-txt="<h4> Mensagem: </h4><p>Sim, teria todo o gosto.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
 						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
 						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 2 / 5" data-help="Resposta pré-definida - 2" data-txt="<h4> Mensagem: </h4><p>Não, não me parece.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    	<li class="left-menu store" data-msg="Mensagem: 2 / 6" data-help="Resposta pré-definida - 2" data-txt="<h4> Mensagem: </h4><p>Não, não me parece.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
 						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
 						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 3 / 5" data-help="Resposta pré-definida - 3" data-txt="<h4> Mensagem: </h4><p>Muito obrigado!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    	<li class="left-menu store" data-msg="Mensagem: 3 / 6" data-help="Resposta pré-definida - 3" data-txt="<h4> Mensagem: </h4><p>Muito obrigado!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
 						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
 						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 4 / 5" data-help="Resposta pré-definida - 4" data-txt="<h4> Mensagem: </h4><p>Não tem nada que agradecer.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    	<li class="left-menu store" data-msg="Mensagem: 4 / 6" data-help="Resposta pré-definida - 4" data-txt="<h4> Mensagem: </h4><p>Não tem nada que agradecer.</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
 						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
 						    	</li>
-						    	<li class="left-menu store" data-msg="Mensagem: 5 / 5" data-help="Resposta pré-definida - 5" data-txt="<h4> Mensagem: </h4><p>Vai tu!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    	<li class="left-menu store" data-msg="Mensagem: 5 / 6" data-help="Resposta pré-definida - 5" data-txt="<h4> Mensagem: </h4><p>Vai tu!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
+						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
+						    	</li>
+						    	<li class="left-menu store" data-msg="Mensagem: 6 / 6" data-help="Resposta pré-definida - 6" data-txt="<h4> Mensagem: </h4><p>Bem-vindo a Portugal!</p><p>Sizenante Fonseca</p><p>24/03/2230</p>">
 						    		<a class="nav-button" href="agree.html"><span class="mainicon glyphicon glyphicon-envelope"></span></a>
 						    	</li>
 								<li class="left-menu" data-msg="Menu principal" data-help="Voltar ao menu principal" data-txt="">
