--- a/Prot 1 func/personalizacao.html
+++ b/Prot 1 func/personalizacao.html
@@ -41,7 +41,7 @@
 		  				<div id="sidebar" class="col-md-8 box smallpadding">
 						    <nav class="nav nav-pills nav-stacked nav-fixed-left nav-inverse text-center" role="navigation">
 						    	<li class="left-menu" data-msg="Gravar" data-help="Gravar as alterações efectuadas ao carro" data-txt="">
-							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-floppy-disk"></span></a>
 							  	</li>
 						    	<li class="left-menu" data-msg="Conforto" data-help="Ajuste o conforto do seu carro a seu gosto" data-txt="">
 							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
@@ -53,10 +53,10 @@
 							  		<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
 							  	</li>
 							    <li class="left-menu" data-msg="Descartar Alterações" data-help="Reverta as alterações efectuadas ao carro" data-txt="">
-							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-delete"></span></a>
 							    </li>
 							    <li class="left-menu" data-msg="Definições de fábrica" data-help="Repor a configuração de fábrica do carro" data-txt="">
-							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-question-sign"></span></a>
+							      	<a class="nav-button" href="#"><span class="mainicon glyphicon glyphicon-factory"></span></a>
 							    </li>
 							  	<li class="left-menu" data-msg="Menu Principal" data-help="Voltar ao menu principal" data-txt="">
 							  		<a class="nav-button" href="index.html"><span class="mainicon glyphicon glyphicon-home"></span></a>
